# pito

./: .bundler-audit.yml  .dockerignore  .editorconfig  .env.example  .gitignore  .prettierignore  .prettierrc.json  .rubocop.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Caddyfile.lb  Dockerfile  Gemfile  LICENSE  Procfile.dev  Procfile.dev.jobs  README.md  VERSION  crush.json  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json  vitest.config.js
.claude/: settings.json
.github/: dependabot.yml
_temp/: CLAUDE.md  yes_no_e2e.rb
config/: application.rb  appsignal.rb  brakeman.ignore  bundler-audit.yml  cable.yml  credentials.yml.enc  database.yml  deploy.yml  importmap.rb  keybindings.yml  pito.yml.example  puma.rb  puma_mcp.rb  queue.yml  recurring.yml  routes.rb  sidekiq.yml  sidekiq_cron.yml  storage.yml
db/: schema.rb  seeds.rb  structure.sql
docs/: EXTRA.md  architecture.md  auth.md  base-font-14px.md  beta6-gaps.md  channel-video-count-stat.md  chat-jobs-coverart-consolidation.md  chat-ui-detail-redesign.md  copy-engine.md  design.md  enhancements-june-2026.md  extending.md  follow-up.md  follow-ups.md  footage-force.md  footage-snippet-width.md  footage.md  footage_probe.md  games.md  list-channel-column.md  list-games.md  list-videos-columns.md  log.md  mcp.md  message-builders.md  plan-beta-reboot-01-ui.md  plan-beta-reboot-02-slash.md  plan-beta-reboot-03-chat.md  plan-beta-reboot-04-consolidation.md  plan.md  (+13 more)
extras/cli/: Cargo.toml
extras/cli/src/: app.rs  auth.rs  cable.rs  cli.rs  confirm.rs  keybindings.rs  keys.rs  lib.rs  main.rs  output.rs  theme.rs  transitions.rs
extras/cli/src/api/: client.rs  http_client.rs  mod.rs  models.rs  thumbnails.rs
extras/cli/src/api/endpoints/: calendar.rs  games.rs  login_attempts.rs  mod.rs  notifications.rs
extras/cli/src/commands/: auth.rs  calendar.rs  footage.rs  games.rs  mod.rs  notifications.rs  search.rs  tui.rs  views.rs
extras/cli/src/footage/: diff.rs  mod.rs
extras/cli/src/footage/api/: client.rs  mod.rs  models.rs
extras/cli/src/footage/probe/: ffprobe.rs  mod.rs
extras/cli/src/footage/ui/: confirmation.rs  mod.rs  progress.rs
extras/cli/src/notifications/: login_pending.rs  mod.rs  overlay.rs
extras/cli/src/ui/: channels.rs  help.rs  leader_menu.rs  mod.rs  videos.rs
extras/cli/src/ui/footage_detail/: capability.rs  mod.rs  preview.rs  render.rs  scrub.rs  state.rs
extras/cli/tests/: auth_integration.rs  calendar_integration.rs  clap_parsing.rs  footage_integration.rs  games_integration.rs  notifications_integration.rs  search_integration.rs  thumbnails_integration.rs  views_integration.rs
(+4892 files in other folders)
