[package]
name = "pito"
version = "0.1.0"
edition = "2024"

[lib]
name = "pito"
path = "src/lib.rs"

[[bin]]
name = "pito"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
open = "5"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
which = "7"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
