[package]
name = "pito"
version = "0.1.0"
edition = "2024"

[lib]
name = "pito"
path = "src/lib.rs"

[[bin]]
name = "pito"
path = "src/main.rs"

[dependencies]
ratatui = "0.30"
# ratatui-image 10.x lines up with ratatui 0.30 + crossterm 0.29. The image
# rendering powers the footage detail scrub screen (Phase 7.5 step 06).
# Default features include `image-defaults` (full image format support) and
# `crossterm` (event integration with the rest of the TUI loop).
# `default-features = false` drops the `chafa-dyn` feature (which links
# libchafa for higher-quality halfblocks). Plain `Halfblocks` rendering still
# works without it; we trade visual fidelity in the fallback path for a
# system-dep-free build. Keep `image-defaults` (full image format support) and
# `crossterm` (event integration).
ratatui-image = { version = "10", default-features = false, features = ["image-defaults", "crossterm"] }
# image 0.25 is ratatui-image's transitive dep — pinned here so the cache
# layer's downscale path can reach the same encoder/decoder surface without
# version skew.
image = "0.25"
crossterm = "0.29"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# YAML loader for `config/keybindings.yml` — the unified keybindings
# schema shared with the Rails web app's Stimulus leader menu.
serde_yaml = "0.9"
anyhow = "1"
thiserror = "2"
open = "5"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
dotenvy = "0.15"
clap = { version = "4", features = ["derive"] }
which = "7"
# Read/write `~/.config/pito/auth.toml` for the `pito auth` subcommand
# family (Phase 18 cli-parity foundation).
toml = "0.9"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
